fix: z-index for nav_menu

--- a/scss/_burgerMenu.scss
+++ b/scss/_burgerMenu.scss
@@ -1,4 +1,5 @@
 .nav {
+  z-index: 1;
   display: flex;
   height: 50px;
   position: sticky;
