--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,6 +89,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: center;
   text-align: left;
 }
 
@@ -108,6 +109,7 @@ body {
 .profile__desc-proffesion {
   font-size: 22px;
   font-weight: bold;
+  margin: 0px 0px 15px 0px;
 }
 
 // Contacts
@@ -164,6 +166,7 @@ body {
 .react__skill {
   display: flex;
   .circle__fill {
+    z-index: 0;
     width: 15px;
     height: 15px;
     background-color: #fff;
